[gd_scene load_steps=3 format=3 uid="uid://kfp8o5wcwdn0"]

[ext_resource type="Script" uid="uid://dchbxxm6ug418" path="res://scripts/menu/main_menu.gd" id="1_m2yvp"]

[sub_resource type="LabelSettings" id="LabelSettings_kjwba"]
font_size = 32
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 4
shadow_color = Color(0.385715, 1, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2yvp")

[node name="BGColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.445691, 0.445691, 0.445691, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GameTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "FRIENDSLOP
TEMPLATE"
label_settings = SubResource("LabelSettings_kjwba")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartGame" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Host Game"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="JoinHBox" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="JoinGame" type="Button" parent="CenterContainer/VBoxContainer/JoinHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 48)
layout_mode = 2
text = "Join"

[node name="JoinIP" type="LineEdit" parent="CenterContainer/VBoxContainer/JoinHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "Server IP Address"
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/JoinHBox/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
